uma nova atualização de html

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
               "workbench.colorCustomizations": {
                             "titleBar.activeBackground": "#c913e7"
-              }
+              },
+              "cSpell.words": [
+                            "Isto"
+              ]
 }
